# ocpp1.6j-basics

./: Dockerfile  README.md  client.py  docker-compose.yml  otel-collector-config.yml  prometheus.yml  pyproject.toml  server.py  tempo.yaml
ocpp16_min/: __init__.py  client.py  common.py  server.py
